--- a/Copy_of_exercise4.ipynb
+++ b/Copy_of_exercise4.ipynb
@@ -48,35 +48,35 @@
     {
       "cell_type": "code",
       "source": [
-        "titlesL = {\"Movie1\": \"Django\" , \"Movie2\" : \"Interstellar\" , \"Movie3\" : \"Batman\"} #έφτιαξε μία λίστα με τις 3 ταινίες που του έθεσα\n",
-        "ratingsL = {\"10\" : \"Django\" , \"9\" : \"Interstellar\" , \"8\" : \"Batman\"} #έφτιαξε μία λίστα με τον βαθμό της κάθε ταινίας\n",
-        "titlesL_values = [] #φτιάξε μια κενή λίστα\n",
-        "for value in titlesL.values():  #για κάθε value σε αυτή την λίστα\n",
-        "    titlesL_values.append(value) #πρόσθεσε τις τιμές value σε αυτή την λίστα\n",
-        "ratingsL_keys = [] #φτιάξε μία κενή λίστα\n",
-        "for keys in ratingsL.keys():  #για κάθε keys στην λίστα\n",
-        "    ratingsL_keys.append(keys) #πρόσθεσε τις τιμές keys\n",
-        "print (titlesL_values , \",\" , ratingsL_keys) #τύπωσε τις δυο καινούργιες λίστες\n",
-        "for i in range(len(titlesL_values)):\n",
-        "  print (titlesL_values[i], \",\" , ratingsL_keys[i])\n"
+        "titlesL = {\"movie1\": \"interstellar\", \"movie2\": \"django\", \"movie3\": \"batman\"} #φτιάξε μία λίστα με τις ταινίες\n",
+        "ratingsL = {\"movie1\": \"10\", \"movie2\": \"8\", \"movie3\": \"9\"} #φτίαξε μία λίστα με τις βαθμολογίες\n",
+        "titlesL_values = [] #φτιάξε μία κενή λίστα\n",
+        "for key, value in titlesL.items(): #για κάθε μία απο τις τιμές στην λίστα titlesL\n",
+        "    titlesL_values.append(value) #πάρε τις τιμές και πρόσθεσε τες στην λίστα\n",
+        "ratingsL_values = [] #φτιάξε μία κενή λίστα\n",
+        "for key, value in ratingsL.items(): #για κάθε μία απο τις τιμές στην λίστα ratingsL\n",
+        "    ratingsL_values.append(value) #πάρε τις τιμές και πρόσθεσε τες στην λίστα\n",
+        "titlesL_values\n",
+        "ratingsL_values\n",
+        "for i in range(len(titlesL_values)): #για κάθε αντικείμενο στο συγκεκριμένο range\n",
+        "    print(titlesL_values[i], ratingsL_values[i]) #τύπωσε αυτά τα αντικέιμενα"
       ],
       "metadata": {
         "id": "wxuW62Ly2z8q",
-        "outputId": "0c6f3743-d3cd-408e-b0f1-9dc0af6c9e7e",
+        "outputId": "327abd31-9559-4857-b669-8dd25379a720",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Django', 'Interstellar', 'Batman'] , ['10', '9', '8']\n",
-            "Django , 10\n",
-            "Interstellar , 9\n",
-            "Batman , 8\n"
+            "interstellar 10\n",
+            "django 8\n",
+            "batman 9\n"
           ]
         }
       ]
@@ -110,37 +110,32 @@
       }
     },
     {
-      "source": [
-        "titlesL = {\"Movie1\": \"Django\" , \"Movie2\" : \"Interstellar\" , \"Movie3\" : \"Batman\"}\n",
-        "ratingsL = {\"10\" : \"Django\" , \"9\" : \"Interstellar\" , \"8\" : \"Batman\"}\n",
-        "moviesL = []\n",
-        "for i in titlesL:\n",
-        "    movieD = {}\n",
-        "    movieD[\"title\"] = titlesL[i]\n",
-        "    rating_key = next((k for k, v in ratingsL.items() if v == titlesL[i]), None)\n",
-        "    if rating_key:\n",
-        "        movieD[\"rating\"] = rating_key\n",
-        "    else:\n",
-        "        movieD[\"rating\"] = \"N/A\"\n",
-        "\n",
-        "    moviesL.append(movieD)\n",
-        "print (moviesL)"
-      ],
       "cell_type": "code",
+      "source": [
+        "titlesL = {\"movie1\": \"interstellar\", \"movie2\": \"django\", \"movie3\": \"batman\"} #φτιάξε μία λίστα με τις ταινίες\n",
+        "ratingsL = {\"movie1\": \"10\", \"movie2\": \"8\", \"movie3\": \"9\"} #φτίαξε μία λίστα με τις βαθμολογίες\n",
+        "moviesL = [] #φτιάξε μία κενή λίστα\n",
+        "for i in range(len(titlesL)): #για κάθε αντικείμενο στο συγκεκριμένο range\n",
+        "  movieD = {} #φτιάξε ένα κενό λεξικό\n",
+        "  movieD[\"title\"] = titlesL_values #προσθέστε ένα item στο λεξικό με όνομα κλειδιού \"title\" και τιμή τον τίτλο που αντιστοιχεί στο εκάστοτε index της λίστας titlesL\n",
+        "  movieD[\"rating\"] = ratingsL_values #προσθέστε ένα item στο λεξικό με όνομα κλειδιού \"rating\" και τιμή το rating που αντιστοιχεδί στο εκάστοτε index της λίστας ratingsL\n",
+        "  moviesL.append(movieD) #προσθέστε το λεξικό στη λίστα\n",
+        "print(moviesL)"
+      ],
       "metadata": {
-        "id": "TU9Y8DC3last",
-        "outputId": "566e7f26-dee4-48ae-bd3e-a61be8cd90ab",
+        "id": "QVh_iorSiXrO",
+        "outputId": "73e13574-6ddf-4c5c-e602-d6196ea10258",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[{'title': 'Django', 'rating': '10'}, {'title': 'Interstellar', 'rating': '9'}, {'title': 'Batman', 'rating': '8'}]\n"
+            "[{'title': ['interstellar', 'django', 'batman'], 'rating': ['10', '8', '9']}, {'title': ['interstellar', 'django', 'batman'], 'rating': ['10', '8', '9']}, {'title': ['interstellar', 'django', 'batman'], 'rating': ['10', '8', '9']}]\n"
           ]
         }
       ]
@@ -167,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "rKIkwJofI3Cj",
         "colab": {
@@ -234,7 +229,7 @@
         },
         "outputId": "4cb82e1e-35cc-4f03-c467-13de647ff0ea"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
