--- a/exercise6.ipynb
+++ b/exercise6.ipynb
@@ -669,11 +669,11 @@
       ],
       "metadata": {
         "id": "VJsfOdMVZLqy",
-        "outputId": "ef4cfe1c-5fc6-4e82-aa58-5eec98496070",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "outputId": "ef4cfe1c-5fc6-4e82-aa58-5eec98496070"
       },
       "execution_count": 6,
       "outputs": [
@@ -1138,11 +1138,11 @@
       ],
       "metadata": {
         "id": "p5ccFq29EWnk",
-        "outputId": "bebe8e62-29a7-4584-9cca-edb47e57e8e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "outputId": "bebe8e62-29a7-4584-9cca-edb47e57e8e3"
       },
       "execution_count": 8,
       "outputs": [
@@ -1489,11 +1489,11 @@
       ],
       "metadata": {
         "id": "XltCZXwzglR-",
-        "outputId": "52a571a0-633e-4808-eb43-32e46da41ce4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "outputId": "52a571a0-633e-4808-eb43-32e46da41ce4"
       },
       "execution_count": 10,
       "outputs": [
@@ -1831,10 +1831,10 @@
       ],
       "metadata": {
         "id": "8yhP-lC8hu3K",
-        "outputId": "aeda8ddd-8dba-4c2b-93d3-9f00a417d2e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "aeda8ddd-8dba-4c2b-93d3-9f00a417d2e4"
       },
       "execution_count": 11,
       "outputs": [
@@ -1882,11 +1882,11 @@
       ],
       "metadata": {
         "id": "P-ZyvI0WlK4b",
-        "outputId": "3853dbdd-d965-4058-c8af-e44b29129b59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
-        }
+        },
+        "outputId": "3853dbdd-d965-4058-c8af-e44b29129b59"
       },
       "execution_count": 12,
       "outputs": [
@@ -1988,11 +1988,11 @@
       ],
       "metadata": {
         "id": "Al7BGXxohMtY",
-        "outputId": "e28bdfda-225c-4816-9403-644f88b57f2c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "outputId": "e28bdfda-225c-4816-9403-644f88b57f2c"
       },
       "execution_count": 63,
       "outputs": [
@@ -2340,10 +2340,10 @@
       ],
       "metadata": {
         "id": "NA0Jij6mkCLi",
-        "outputId": "cf51023c-9451-4a92-886f-62844c3d97dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cf51023c-9451-4a92-886f-62844c3d97dc"
       },
       "execution_count": 15,
       "outputs": [
@@ -2391,64 +2391,27 @@
       "source": [
         "# δείτε τις μοναδικές τιμές της στήλης \"continent\" του dataframe\n",
         "\n",
-        "df.country.unique()"
+        "df.continent.unique()"
       ],
       "metadata": {
         "id": "IAsOojPrmHjX",
-        "outputId": "dce26a99-ff5c-4d68-d975-1afe02a2bbe4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "95b4b82d-e403-4179-b530-a8ed6d998112"
       },
-      "execution_count": 18,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array(['Afghanistan', 'Albania', 'Algeria', 'Angola',\n",
-              "       'Antigua and Barbuda', 'Argentina', 'Armenia', 'Australia',\n",
-              "       'Austria', 'Azerbaijan', 'Bahamas', 'Bahrain', 'Bangladesh',\n",
-              "       'Barbados', 'Belarus', 'Belgium', 'Belize', 'Benin', 'Bhutan',\n",
-              "       'Bolivia', 'Bosnia and Herzegovina', 'Botswana', 'Brazil',\n",
-              "       'Brunei', 'Bulgaria', 'Burkina Faso', 'Burundi', 'Cambodia',\n",
-              "       'Cameroon', 'Canada', 'Cape Verde', 'Central African Rep.', 'Chad',\n",
-              "       'Chile', 'China', 'Colombia', 'Comoros', 'Congo, Dem. Rep.',\n",
-              "       'Congo, Rep.', 'Costa Rica', \"Cote d'Ivoire\", 'Croatia', 'Cuba',\n",
-              "       'Cyprus', 'Czech Rep.', 'Denmark', 'Djibouti', 'Dominican Rep.',\n",
-              "       'Ecuador', 'Egypt', 'El Salvador', 'Equatorial Guinea', 'Eritrea',\n",
-              "       'Estonia', 'Ethiopia', 'Fiji', 'Finland', 'France', 'Gabon',\n",
-              "       'Gambia', 'Georgia', 'Germany', 'Ghana', 'Greece', 'Greenland',\n",
-              "       'Grenada', 'Guatemala', 'Guinea', 'Guinea-Bissau', 'Guyana',\n",
-              "       'Haiti', 'Honduras', 'Hong Kong, China', 'Hungary', 'Iceland',\n",
-              "       'India', 'Indonesia', 'Iran', 'Iraq', 'Ireland', 'Israel', 'Italy',\n",
-              "       'Jamaica', 'Japan', 'Jordan', 'Kazakhstan', 'Kenya', 'Kiribati',\n",
-              "       'Korea, Dem. Rep.', 'Korea, Rep.', 'Kuwait', 'Kyrgyzstan', 'Laos',\n",
-              "       'Latvia', 'Lebanon', 'Lesotho', 'Liberia', 'Libya', 'Lithuania',\n",
-              "       'Luxembourg', 'Macao, China', 'Macedonia, FYR', 'Madagascar',\n",
-              "       'Malawi', 'Malaysia', 'Maldives', 'Mali', 'Malta', 'Mauritania',\n",
-              "       'Mauritius', 'Mexico', 'Micronesia, Fed. Sts.', 'Moldova',\n",
-              "       'Mongolia', 'Montenegro', 'Morocco', 'Mozambique', 'Myanmar',\n",
-              "       'Namibia', 'Nepal', 'Netherlands', 'New Zealand', 'Nicaragua',\n",
-              "       'Niger', 'Nigeria', 'Norway', 'Oman', 'Pakistan', 'Panama',\n",
-              "       'Papua New Guinea', 'Paraguay', 'Peru', 'Philippines', 'Poland',\n",
-              "       'Portugal', 'Qatar', 'Romania', 'Russia', 'Rwanda', 'Saint Lucia',\n",
-              "       'Saint Vincent and the Grenadines', 'Samoa',\n",
-              "       'Sao Tome and Principe', 'Saudi Arabia', 'Senegal', 'Serbia',\n",
-              "       'Seychelles', 'Sierra Leone', 'Singapore', 'Slovak Republic',\n",
-              "       'Slovenia', 'Solomon Islands', 'Somalia', 'South Africa',\n",
-              "       'South Sudan', 'Spain', 'Sri Lanka', 'Sudan', 'Suriname',\n",
-              "       'Swaziland', 'Sweden', 'Switzerland', 'Syria', 'Taiwan',\n",
-              "       'Tajikistan', 'Tanzania', 'Thailand', 'Timor-Leste', 'Togo',\n",
-              "       'Tonga', 'Trinidad and Tobago', 'Tunisia', 'Turkey',\n",
-              "       'Turkmenistan', 'Uganda', 'Ukraine', 'United Arab Emirates',\n",
-              "       'United Kingdom', 'United States', 'Uruguay', 'Uzbekistan',\n",
-              "       'Vanuatu', 'Venezuela', 'Vietnam', 'West Bank and Gaza',\n",
-              "       'Yemen, Rep.', 'Zambia', 'Zimbabwe'], dtype=object)"
+              "array(['Asia', 'Europe', 'Africa', 'N. America', 'S. America', 'Oceania'],\n",
+              "      dtype=object)"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 105
         }
       ]
     },
@@ -2461,10 +2424,10 @@
       ],
       "metadata": {
         "id": "iaJey5ubo01q",
-        "outputId": "0937fd0f-8f62-40aa-fbb1-a94f0be210e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0937fd0f-8f62-40aa-fbb1-a94f0be210e6"
       },
       "execution_count": 24,
       "outputs": [
@@ -2514,11 +2477,11 @@
       ],
       "metadata": {
         "id": "-rsE0BB7qM8V",
-        "outputId": "450ed4a5-1b6b-4e1c-d3e9-bd8137d0c771",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 304
-        }
+        },
+        "outputId": "450ed4a5-1b6b-4e1c-d3e9-bd8137d0c771"
       },
       "execution_count": 75,
       "outputs": [
@@ -2651,10 +2614,10 @@
       ],
       "metadata": {
         "id": "-ZR8-v8a0eNl",
-        "outputId": "4e310bfe-aba0-4c04-950b-42afd1a28bfc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4e310bfe-aba0-4c04-950b-42afd1a28bfc"
       },
       "execution_count": 26,
       "outputs": [
@@ -2679,10 +2642,10 @@
       ],
       "metadata": {
         "id": "ToluQVlZ1d1F",
-        "outputId": "20f3e434-a6d4-4480-e8ab-f90209519ad2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "20f3e434-a6d4-4480-e8ab-f90209519ad2"
       },
       "execution_count": 27,
       "outputs": [
@@ -2757,10 +2720,10 @@
       ],
       "metadata": {
         "id": "V7nayxRsrnTo",
-        "outputId": "814fd32c-0b0e-4895-cc5a-4ac6314c725b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "814fd32c-0b0e-4895-cc5a-4ac6314c725b"
       },
       "execution_count": 36,
       "outputs": [
@@ -2785,10 +2748,10 @@
       ],
       "metadata": {
         "id": "mv3pOZbhvHPZ",
-        "outputId": "8c100cc3-c578-46fe-dc0d-eed541429cfa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8c100cc3-c578-46fe-dc0d-eed541429cfa"
       },
       "execution_count": 38,
       "outputs": [
@@ -2813,10 +2776,10 @@
       ],
       "metadata": {
         "id": "tTb_r8pyzrqV",
-        "outputId": "a7472acd-403f-4cba-904c-fe9de7c5e4fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a7472acd-403f-4cba-904c-fe9de7c5e4fc"
       },
       "execution_count": 39,
       "outputs": [
@@ -2870,11 +2833,11 @@
       ],
       "metadata": {
         "id": "rVU9NJm_0NWf",
-        "outputId": "b33ef86a-991e-45fb-99c8-7d37a9fc40a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "outputId": "b33ef86a-991e-45fb-99c8-7d37a9fc40a3"
       },
       "execution_count": 40,
       "outputs": [
@@ -3190,11 +3153,11 @@
       ],
       "metadata": {
         "id": "pyFi0OpJ8NXP",
-        "outputId": "efeb8f81-74a3-4238-da44-6179cac22832",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "outputId": "efeb8f81-74a3-4238-da44-6179cac22832"
       },
       "execution_count": 41,
       "outputs": [
@@ -3557,11 +3520,11 @@
       ],
       "metadata": {
         "id": "vYGexUKk-5lD",
-        "outputId": "85312d9f-94dd-47d2-fd21-14880cbdb7e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
-        }
+        },
+        "outputId": "85312d9f-94dd-47d2-fd21-14880cbdb7e4"
       },
       "execution_count": 42,
       "outputs": [
@@ -3686,11 +3649,11 @@
       ],
       "metadata": {
         "id": "BL6YlIzm9Sj_",
-        "outputId": "94808f19-54ec-4ce8-92fb-8ddf6362d894",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "outputId": "94808f19-54ec-4ce8-92fb-8ddf6362d894"
       },
       "execution_count": 52,
       "outputs": [
@@ -4063,11 +4026,11 @@
       ],
       "metadata": {
         "id": "-QTnXageUWoC",
-        "outputId": "932c32c7-b1f7-4643-ab04-c1fe85dba419",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "932c32c7-b1f7-4643-ab04-c1fe85dba419"
       },
       "execution_count": 55,
       "outputs": [
@@ -4912,11 +4875,11 @@
       ],
       "metadata": {
         "id": "IRL5khRrfP_x",
-        "outputId": "73b5772a-664b-40dc-a8af-b708e11e4e53",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "outputId": "73b5772a-664b-40dc-a8af-b708e11e4e53"
       },
       "execution_count": 56,
       "outputs": [
@@ -5269,11 +5232,11 @@
       ],
       "metadata": {
         "id": "CQWMRCMUHBEt",
-        "outputId": "c52a49d3-4633-4f2e-9ef6-dbd66e2b6a8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
-        }
+        },
+        "outputId": "c52a49d3-4633-4f2e-9ef6-dbd66e2b6a8d"
       },
       "execution_count": 57,
       "outputs": [
@@ -5394,11 +5357,11 @@
       ],
       "metadata": {
         "id": "j-qH5xatTQKh",
-        "outputId": "6b04f023-3e27-4f0c-bd19-644f016afd5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
-        }
+        },
+        "outputId": "6b04f023-3e27-4f0c-bd19-644f016afd5e"
       },
       "execution_count": 59,
       "outputs": [
@@ -5506,11 +5469,11 @@
       ],
       "metadata": {
         "id": "fEatqNgaTj9r",
-        "outputId": "7cd637c0-8123-4efe-f14b-4395252fd940",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "outputId": "7cd637c0-8123-4efe-f14b-4395252fd940"
       },
       "execution_count": 60,
       "outputs": [
@@ -5875,10 +5838,10 @@
       ],
       "metadata": {
         "id": "prlWCyrnkmib",
-        "outputId": "e3305177-ad21-4e4b-8d7e-d9d450fd2058",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e3305177-ad21-4e4b-8d7e-d9d450fd2058"
       },
       "execution_count": 73,
       "outputs": [
@@ -5900,11 +5863,11 @@
         "print(df.sort_values(\"gdp_per_capita\",ascending=False).head())\n"
       ],
       "metadata": {
-        "id": "6R_LlnUqUWaZ",
-        "outputId": "ec59bd7c-0a80-459f-ae5c-2411e40c53d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6R_LlnUqUWaZ",
+        "outputId": "ec59bd7c-0a80-459f-ae5c-2411e40c53d8"
       },
       "execution_count": 82,
       "outputs": [
@@ -5945,12 +5908,12 @@
         "df.gdp_per_capita >= 600\n"
       ],
       "metadata": {
-        "id": "BpzTUT3OXo_B",
-        "outputId": "b2f599e6-1ab2-49d7-93be-d99f1dd3f7d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
-        }
+        },
+        "id": "BpzTUT3OXo_B",
+        "outputId": "b2f599e6-1ab2-49d7-93be-d99f1dd3f7d5"
       },
       "execution_count": 100,
       "outputs": [
@@ -6055,12 +6018,12 @@
         "df.gdp_per_capita <= 800"
       ],
       "metadata": {
-        "id": "tGHqDOklbcgG",
-        "outputId": "ce203812-7a69-49f9-9404-1c43a5b4280a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
-        }
+        },
+        "id": "tGHqDOklbcgG",
+        "outputId": "ce203812-7a69-49f9-9404-1c43a5b4280a"
       },
       "execution_count": 101,
       "outputs": [
@@ -6165,12 +6128,12 @@
         "(df.gdp_per_capita >= 600) & (df.gdp_per_capita <= 800)"
       ],
       "metadata": {
-        "id": "L9UsglUIbsuu",
-        "outputId": "2f7cd040-1604-4625-869e-51ae8b6844dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
-        }
+        },
+        "id": "L9UsglUIbsuu",
+        "outputId": "2f7cd040-1604-4625-869e-51ae8b6844dd"
       },
       "execution_count": 103,
       "outputs": [
@@ -6275,12 +6238,12 @@
         "df[(df.gdp_per_capita >= 600) & (df.gdp_per_capita <= 800)]"
       ],
       "metadata": {
-        "id": "N88ehvQGbfQn",
-        "outputId": "78316983-ea23-42a6-eb61-68091934eda1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "N88ehvQGbfQn",
+        "outputId": "78316983-ea23-42a6-eb61-68091934eda1"
       },
       "execution_count": 104,
       "outputs": [
